@@ -152,6 +152,7 @@ struct tl880_dev {
 	struct tq_struct bh;		/* Device-specific info for interrupt bottom half */
 	unsigned int irq;		/* Interrupt line */
 
+	unsigned long int_mask;		/* Global interrupt enable mask */
 	unsigned long int_type;		/* Type of interrupt to service */
 	unsigned long int_count;	/* Number of interrupts received */
 
@@ -278,6 +279,8 @@ void tl880_init_ntsc_audio(struct tl880_dev *tl880dev);
 /* tl880dpc.c */
 void tl880_set_dpc_pll_const(struct tl880_dev *tl880dev, unsigned long a, unsigned char b, unsigned char c);
 void tl880_init_dpc_pll(struct tl880_dev *tl880dev);
+int tl880_dpc_int(struct tl880_dev *tl880dev);
+
 
 /* tl880modes.c */
 
